# TensorImgPipeline

./: .cruft.json  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
benchmarks/: bench_progressbar_decorators.py  plot_current_results.py  results.json
configs/sam2segnet/: execute_pipeline.toml  hyper_config.toml
docs/: getting_started.md  ideas.md  index.md
docs/modules/: abstractions.md  builder.md  controller.md  errors.md  permanences.md  processes.md
getting_started/: index.html
ideas/: index.html
installation/: index.html
modules/abstractions/: index.html
modules/builder/: index.html
modules/controller/: index.html
modules/errors/: index.html
notebooks/: experiment_Wandb_exists.py  experiment_wandb_log.py  experiment_with_colors.py  experimient_sam2FCN.ipynb
pytorchimagepipeline/: abstractions.py  builder.py  cli.py  controller.py  decorators.py  errors.py  helpers.py  observer.py  paths.py  template_manager.py
pytorchimagepipeline/abstractions/: __init__.py  config.py  controller.py  permanence.py  process.py
pytorchimagepipeline/core/: __init__.py  builder.py  config.py  controller.py  executor.py  permanences.py  processes.py  runner.py
pytorchimagepipeline/pipelines/sam2segnet/: __init__.py  config.py  errors.py  formats.py  manager.py  observer.py  permanence.py  processes.py  utils.py
search/: search_index.json
templates/project/: README.md.j2  __init__.py.j2  gitignore.j2  permanences.py.j2  pipeline_config.toml.j2  processes.py.j2  pyproject.toml.j2
templates/project/basic/: permanence_config.toml.j2  permanences.py.j2  process_config.toml.j2
templates/project/full/: permanence_config.toml.j2  permanences.py.j2  processes.py.j2
templates/project/pause/: permanence_config.toml.j2  permanences.py.j2  process_config.toml.j2  processes.py.j2
tests/: __init__.py  conftest.py  test_config_parser.py  test_foo.py.disabled  test_progress_manager.py  test_sam2segnet_permanence.py.disabled
tests/e2e/: __init__.py  conftest.py  fixtures.py  test_e2e_pipeline.py
tests/integration/: __init__.py  conftest.py  fixtures.py  test_cli.py  test_scaffolding_and_execution.py
tests/unit/: __init__.py  test_builder.py  test_core_permanences.py  test_decorators.py  test_logger_confusion_matrix.py  test_logger_patterns.py  test_logger_tensorboard.py  test_paths.py  test_progress_integration.py  test_progress_manager.py  test_template_manager.py
tipi/: abstractions.py  cli.py  decorators.py  errors.py  helpers.py  paths.py  template_manager.py
tipi/abstractions/: __init__.py  config.py  controller.py  permanence.py  process.py
tipi/benchmarks/: colors.py  data.py  plotting.py
tipi/core/: __init__.py  builder.py  config.py  controller.py  executor.py  permanences.py  processes.py  runner.py  utils.py
tipi/core/loggers/: __init__.py  base.py  basic.py  tensorboard.py  wandb.py
tipi/core/permanences/: __init__.py  device.py  progress.py
tipi/core/permanences/loggers/: __init__.py  base.py  basic.py  patterns.py  tensorboard.py  wandb.py
tipi/templates/project/: processes.py.j2  pyproject.toml.j2
tipi/templates/project/basic/: processes.py.j2
tipi/templates/project/full/: process_config.toml.j2
tipi/templates/project/pause/: process_config.toml.j2
usage/: index.html
