[project]
name = "TensorImgPipeline"
version = "0.0.1"
description = "This is a repository for creating and running Tipi Pipelines."
authors = [
    { name = "Matti Kaupenjohann", email = "matti.kaupenjohann@fh-dortmund.de" },
]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.11,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "defusedxml>=0.7.1",
    "jinja2>=3.1.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.0.0",
    "rich>=13.9.4",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "types-defusedxml>=0.7.0.20240218",
    "wandb>=0.19.6",
]

[project.urls]
Homepage = "https://tensorimgpipeline.github.io/TensorImgPipeline/"
Repository = "https://github.com/tensorimgpipeline/TensorImgPipeline"
Documentation = "https://tensorimgpipeline.github.io/TensorImgPipeline/"

[project.scripts]
tensorimgpipeline = "tipi.cli:app"
tipi = "tipi.cli:app"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.22.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pyfakefs>=5.3.0",
    "ruff>=0.9.2",
    "zensical>=0.0.26",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "opencv-python>=4.11.0.86",
    "beautifulsoup4>=4.12.3",
    "tabulate>=0.9.0",
    "pytest-html>=4.1.1",
    "pytest-order>=1.3.0",
    "hypothesis>=6.150.3",
    "pyperf>=2.9.0",
    "mkdocstrings-python>=2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tipi"]

[tool.mypy]
files = ["tipi"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["torchvision.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tipi.benchmarks.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--html=test_reports/report.html"]
markers = [
    "integration: integration tests",
    "e2e: end-to-end tests",
]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Ignore TRY003 until allows ValueErrors etc
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]
"notebooks/*" = ["S314", "TRY003"]
"tipi/cli.py" = ["C901", "S603"]
"tipi/core/builder.py" = ["TRY003"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["tipi"]

[tool.deptry]
extend_exclude = ["notebooks/*", "benchmarks/*"]
ignore = ["DEP002"]
